src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D101_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    PublicClass: ~
  location:
    row: 15
    column: 6
  end_location:
    row: 15
    column: 12
  fix: ~
  parent: ~

