src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D102_setter.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    PublicMethod: ~
  location:
    row: 16
    column: 8
  end_location:
    row: 16
    column: 11
  fix: ~
  parent: ~

