src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D103_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    PublicFunction: ~
  location:
    row: 400
    column: 4
  end_location:
    row: 400
    column: 17
  fix: ~
  parent: ~

