src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D200_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    FitsOnOneLine: ~
  location:
    row: 129
    column: 4
  end_location:
    row: 131
    column: 7
  fix:
    content: "\"\"\"Wrong.\"\"\""
    location:
      row: 129
      column: 4
    end_location:
      row: 131
      column: 7
  parent: ~
- kind:
    FitsOnOneLine: ~
  location:
    row: 597
    column: 4
  end_location:
    row: 599
    column: 13
  fix:
    content: "\"\"\"Wrong.\"\"\""
    location:
      row: 597
      column: 4
    end_location:
      row: 599
      column: 13
  parent: ~
- kind:
    FitsOnOneLine: ~
  location:
    row: 606
    column: 4
  end_location:
    row: 608
    column: 7
  fix:
    content: "r\"\"\"Wrong.\"\"\""
    location:
      row: 606
      column: 4
    end_location:
      row: 608
      column: 7
  parent: ~

