src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D205_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    BlankLineAfterSummary: 0
  location:
    row: 200
    column: 4
  end_location:
    row: 203
    column: 7
  fix: ~
  parent: ~
- kind:
    BlankLineAfterSummary: 2
  location:
    row: 210
    column: 4
  end_location:
    row: 215
    column: 7
  fix:
    content: "\n"
    location:
      row: 211
      column: 0
    end_location:
      row: 213
      column: 0
  parent: ~

