src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D209_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    NewLineAfterLastParagraph: ~
  location:
    row: 281
    column: 4
  end_location:
    row: 283
    column: 19
  fix:
    content: "\n    "
    location:
      row: 283
      column: 16
    end_location:
      row: 283
      column: 16
  parent: ~

